// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<tr
  data-id="Foo"
>
  <td
    className="width-20"
    headers="list-group-name"
  >
    <strong>
      Foo
    </strong>
  </td>
  <td
    className="group-members display-flex-justify-end"
    headers="list-group-member"
  >
    <span>
      1
    </span>
    <EditMembers
      group={
        {
          "managed": false,
          "membersCount": 1,
          "name": "Foo",
        }
      }
      onEdit={[MockFunction]}
    />
  </td>
  <td
    className="width-40"
    headers="list-group-description"
  >
    <span
      className="js-group-description"
    />
  </td>
  <td
    className="thin nowrap text-right"
    headers="list-group-actions"
  >
    <ActionsDropdown
      label="groups.edit.Foo"
    >
      <ActionsDropdownItem
        className="js-group-update"
        onClick={[Function]}
      >
        update_details
      </ActionsDropdownItem>
      <ActionsDropdownDivider />
      <ActionsDropdownItem
        className="js-group-delete"
        destructive={true}
        onClick={[Function]}
      >
        delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: default group 1`] = `
<tr
  data-id="Foo"
>
  <td
    className="width-20"
    headers="list-group-name"
  >
    <strong>
      Foo
    </strong>
    <span
      className="little-spacer-left"
    >
      (
      default
      )
    </span>
  </td>
  <td
    className="group-members display-flex-justify-end"
    headers="list-group-member"
  >
    <span
      className="big-padded-right spacer-right"
    >
      1
    </span>
  </td>
  <td
    className="width-40"
    headers="list-group-description"
  >
    <span
      className="js-group-description"
    />
  </td>
  <td
    className="thin nowrap text-right"
    headers="list-group-actions"
  />
</tr>
`;
